@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 07ce8e5cdfafdfed20064d58390247e3ffe7335f ChangeLog
+SHA1 f480d066fb0f1ef85f7612167fdee2197b4f98dd ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 987fe26315f11d26e08f475bc5b1d392b412a428 META.yml
-SHA1 f413957df75cdf52acef1a95e0cce1505c3975ac MYMETA.json
-SHA1 9e81bbbd737ea2edb913fe6d11c5250a27d3e21e MYMETA.yml
-SHA1 1d376f882a12343a5cb603519d33ae295029581d Makefile.PL
+SHA1 117f76b323ea83d07aca41946604621d1b0d78a2 META.yml
+SHA1 39fa740fd3961442df0f2d76d4c4f526be288a46 MYMETA.json
+SHA1 9dd151d6b20e8356c6e9754c52b6a6c1db6d827d MYMETA.yml
+SHA1 e9524ad3b6567ef5a55201b2db8bae5abc6b493d Makefile.PL
 SHA1 cbcb130fc9fe3f4d4dd8263e7b4ee4b39b182bd1 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 39cf02b95d140e1dd95b4c7486b225f29eacb90a bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 f1dd82c16fc6894c7949d64c481782cfed7a59b0 install_mozrepl_plugin.ahk
-SHA1 baaf299ac901a6e8a8c45c7e2d86d78f8a3bd139 lib/Net/FullAuto.pm
+SHA1 84cf495f9124040069484225cb839388436dec3f lib/Net/FullAuto.pm
 SHA1 8a710a48bb21aa584949dbbe3649c0d5b2b084fc lib/Net/FullAuto/Custom/BackUp/README
 SHA1 b9b90c2707951d9d5753dc9ef9699abe7daddee9 lib/Net/FullAuto/Custom/README
 SHA1 b2282d66e77abab818cb5c894e164f82db09b720 lib/Net/FullAuto/Distro/fa_code.pm
@@ -56,7 +56,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlDofe8ACgkQJM3IZYB6aOr54gCgmHjok2EYhurPFdSUHB68CS8t
-hTIAmgO725UCFfpMhkFYMSOnuoGAH0ti
-=54Bt
+iEYEARECAAYFAlDo+ycACgkQJM3IZYB6aOqTDQCfbV/LTu/IgBKXHZgYTHpREzh5
+NWoAn1MOYrYULs2nwK34qXy8vY1publM
+=6n+F
 -----END PGP SIGNATURE-----
